<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_get_identity"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_get_identity" />
        <item
            android:id="@+id/nav_custom_identity"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_custom_identity" />
        <item
            android:id="@+id/nav_multiple_identity"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_multiple_identity" />
        <item
            android:id="@+id/nav_assurance"
            android:icon="@drawable/ic_menu_assurance"
            android:title="@string/menu_assurance" />
    </group>
</menu>
