<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_get_identity">

    <fragment
        android:id="@+id/nav_get_identity"
        android:name="com.adobe.marketing.edge.identity.app.ui.GetIdentityFragment"
        android:label="@string/menu_get_identity"
        tools:layout="@layout/fragment_get_identity" />

    <fragment
        android:id="@+id/nav_custom_identity"
        android:name="com.adobe.marketing.edge.identity.app.ui.CustomIdentityFragment"
        android:label="@string/menu_custom_identity"
        tools:layout="@layout/fragment_custom_identity" />

    <fragment
        android:id="@+id/nav_multiple_identity"
        android:name="com.adobe.marketing.edge.identity.app.ui.MultipleIdentityFragment"
        android:label="@string/menu_multiple_identity"
        tools:layout="@layout/fragment_multiple_identity" />

    <fragment
        android:id="@+id/nav_assurance"
        android:name="com.adobe.marketing.edge.identity.app.ui.AssuranceFragment"
        android:label="@string/menu_assurance"
        tools:layout="@layout/fragment_assurance" />
</navigation>
