<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CustomIdentityFragment">

    <LinearLayout
        android:id="@+id/layout_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/label_identifier"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_identifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_namespace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintTop_toBottomOf="@id/layout_identifier">

        <TextView
            android:id="@+id/label_namespace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/label_namespace"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_namespace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintTop_toBottomOf="@id/layout_namespace">

        <CheckBox
            android:id="@+id/checkbox_is_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_is_primary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_authenticated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintTop_toBottomOf="@id/layout_primary">

        <RadioGroup
            android:id="@+id/radio_group_authenticated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_ambiguous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/authentication_ambiguous" />

            <RadioButton
                android:id="@+id/radio_authenticated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authentication_authenticated" />

            <RadioButton
                android:id="@+id/radio_logged_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authentication_logged_out" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_authenticated"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_update_identities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update_identities" />

        <Button
            android:id="@+id/btn_remove_identities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_remove_identities" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_request_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <Button
            android:id="@+id/btn_get_gaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_get_gaid" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_set_ad_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_request_authorization">

        <Button
            android:id="@+id/btn_set_ad_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_set_ad_id" />

        <EditText
            android:id="@+id/text_ad_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_enter_ad_id" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_set_ad_id_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_set_ad_id"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/btn_set_ad_id_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_set_ad_id_null" />

        <Button
            android:id="@+id/btn_set_ad_id_all_zeros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_set_ad_id_all_zeros" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_consents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_set_ad_id_values">

        <Button
            android:id="@+id/btn_get_consents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_get_consents" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>