<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MultipleIdentityFragment">

    <LinearLayout
        android:id="@+id/layout_edge_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/radio_edge_identity_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:checked="true"
            />

        <Button
            android:id="@+id/btn_edge_send_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_event"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_edge_clear_persistence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_persistence"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_direct_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/layout_edge_identity"
        app:layout_constraintHorizontal_bias="0.52"
        >

        <RadioButton android:id="@+id/radio_direct_identity_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:checked="true"
            />

        <Button
            android:id="@+id/btn_direct_trigger_state_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_trigger_state_change"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_direct_clear_persistence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_persistence"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/btn_set_privacy_optin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_privacy_optin"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btn_set_privacy_optout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_privacy_optout"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>