<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GetIdentityFragment">

    <LinearLayout
        android:id="@+id/layout_edge_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/btn_get_ecid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_ecid"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            >
            <TextView
                android:id="@+id/text_ecid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_legacy_ecid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_gravity="center"
                />

        </LinearLayout>


        <Button
            android:id="@+id/btn_reset_identities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_identities"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_get_identities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_identities"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/text_identities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:scrollbars="vertical"
            android:background="@drawable/border"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>